# invest

./: .gitignore  README.md  pyproject.toml
invest_backend/conf/: settings.py  urls.py
invest_backend/src/assets/: admin.py  apps.py  models.py  serializer.py  views.py
invest_backend/src/attributes_list/: admin.py  apps.py  models.py
invest_backend/src/fin_attributes/: admin.py  apps.py  models.py
invest_backend/src/operations/: models.py
invest_backend/src/services/: exceptions.py  take_exchange_rates.py
invest_backend/src/services/take_prices/: _cryptocompare.py  _google.py  _moex.py  _yahoo.py  cryptocompare.py  moex.py  take_prices.py  yahoo.py
invest_backend/src/transactions/: admin.py  apps.py  models.py  serializer.py  views.py
invest_front/src/: App.vue  main.js  store.js
invest_front/src/assets/: main.css
invest_front/src/components/common/: NavBar.vue  UnregistredMainPage.vue  _FooterBar.vue
invest_front/src/components/profiles/: ProfileDetail.vue
invest_front/src/router/: index.js
invest_front/src/views/: AssetsView.vue  HomeView.vue  OperationsView.vue  ProfileDetailView.vue  ProfileEditView.vue  StatisticsView.vue  UserLogInView.vue  UserRegistrationView.vue
