[tool.poetry]
name = "invest"
version = "0.1.0"
description = ""
authors = ["anton <sparco114@ya.ru>"]

[tool.poetry.dependencies]
python = "3.10"
Django = "3.2.20"
djangorestframework = "3.14.0"
djoser = "2.2.0"
psycopg2 = "2.9.7"
django-cors-headers = "4.2.0"
numpy = "1.23.2)"
pandas = "2.1.1"
beautifulsoup4 = "4.12.2"
lxml = "4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
